# End-to-End-DevOps-AWS-Rust-MariaDB

./: .gitignore  README.md
rust_web_app/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml  init.sql  playbook.yml
rust_web_app/src/: main.rs
