[package]
name = "rust_web_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
idna = "0.2"

[dependencies.resolve]
idna = "0.2.3"